# braitenbug

./: CMakeLists.txt  README.md  package.xml
braitenbug/: geometry.py
config/: test_false_lidar.rviz  whiskers_test.perspective
include/braitenbug/: braitenbug_utils.hpp
launch/: test_fake_lidar_launch.py  test_whiskers_launch.py  whiskers_experiment_launch.py
scripts/: ui_test.py  visualize_lidar.py  visualize_whiskers.py  whiskers_experiment.py
src/: braitenbug_utils.cpp  fake_lidar.cpp  fake_lidar_config.cpp  fake_lidar_config.hpp  neo_whiskers.cpp  whiskers-node.cpp
